--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,20 @@
 }
 /* ------------------------ GENERAL */
 div.container{
-	height: 100%;
+	min-height: 100%;
 	width: 100%;
+	position: fixed;
+	padding: 40px 0 100px;
+}
+div.content{
+	width: 1024px;
+	height: 768px;
+	margin: auto;
 	position: relative;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
 }
 ul {
 	list-style: none;
