--- a/css/style.css
+++ b/css/style.css
@@ -10,18 +10,8 @@ html, body{
 div.container{
 	min-height: 100%;
 	width: 100%;
-	position: fixed;
-	padding: 40px 0 100px;
-}
-div.content{
-	width: 1024px;
-	height: 768px;
-	margin: auto;
 	position: relative;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
+	padding: 40px 0 100px;
 }
 ul {
 	list-style: none;
@@ -55,12 +45,18 @@ div.nav.bar{
 	z-index: 1;
 }
 /* ----------------------- PANTALLA 1 INICIO*/
+div.Inicio{
+	background: url(../img/girl1.png)no-repeat;
+	background-size: cover;
+}
+/*
 div.background-girl{
 	background: url(../img/girl1.png)no-repeat;
 	height: 100%;
 	width: 100%;
 	background-size: cover;
 }
+*/
 ul {
 	margin: auto;
 	width: 690px;
@@ -91,13 +87,22 @@ img.boton{
 	right: 70px;
 }
 /* ----------------------- PANTALLA 2 LENTES*/
-div.background-girl2{
+div.Lentes{
 	background: url(../img/fondo_3.png)no-repeat;
+	background-size: cover;
+}
+/*div.background-girl2{
+	background: url(../img/fondo_4.png)no-repeat;
 	height: 100%;
 	width: 100%;
 	background-size: cover;
 }
 /* ----------------------- PANTALLA 3 TACONES*/
+div.Tacones{
+	background: url(../img/fondo_4.png)no-repeat;
+	background-size: cover;
+}
+/*
 div.background-girl3{
 	background: url(../img/fondo_4.png)no-repeat;
 	height: 100%;
@@ -105,12 +110,18 @@ div.background-girl3{
 	background-size: cover;
 }
 /* ----------------------- PANTALLA 4 DIENTE*/ 
+div.Iluminadores{
+	background: url(../img/fondo.png)no-repeat;
+	background-size: cover;
+}
+/*
 div.background-rojo{
 	background: url(../img/fondo.png)no-repeat;
 	height: 100%;
 	width: 100%;
 	background-size: cover;
 }
+*/
 img.diente{
 	position: absolute;
 	top: 100px;
@@ -135,6 +146,10 @@ h1.opticos {
 	right: 250px;
 }
 /* ----------------------- PANTALLA 5 3min*/ 
+div.redbg{
+	background: url(../img/fondo.png)no-repeat;
+	background-size: cover;
+}
 img.minutos{
 	position: absolute;
 	top: 70px;
