--- a/css/style.css
+++ b/css/style.css
@@ -49,14 +49,6 @@ div.Inicio{
 	background: url(../img/girl1.png)no-repeat;
 	background-size: cover;
 }
-/*
-div.background-girl{
-	background: url(../img/girl1.png)no-repeat;
-	height: 100%;
-	width: 100%;
-	background-size: cover;
-}
-*/
 ul {
 	margin: auto;
 	width: 690px;
@@ -91,22 +83,9 @@ div.Lentes{
 	background: url(../img/fondo_3.png)no-repeat;
 	background-size: cover;
 }
-/*div.background-girl2{
-	background: url(../img/fondo_4.png)no-repeat;
-	height: 100%;
-	width: 100%;
-	background-size: cover;
-}
 /* ----------------------- PANTALLA 3 TACONES*/
 div.Tacones{
 	background: url(../img/fondo_4.png)no-repeat;
-	background-size: cover;
-}
-/*
-div.background-girl3{
-	background: url(../img/fondo_4.png)no-repeat;
-	height: 100%;
-	width: 100%;
 	background-size: cover;
 }
 /* ----------------------- PANTALLA 4 DIENTE*/ 
@@ -114,14 +93,12 @@ div.Iluminadores{
 	background: url(../img/fondo.png)no-repeat;
 	background-size: cover;
 }
-/*
-div.background-rojo{
+.container.Articulos{
 	background: url(../img/fondo.png)no-repeat;
 	height: 100%;
 	width: 100%;
 	background-size: cover;
 }
-*/
 img.diente{
 	position: absolute;
 	top: 100px;
@@ -169,29 +146,154 @@ p.drama2 {
 	font-weight: 500;
 }
 /* ----------------------- PANTALLA 6 BLUSAS*/
-div.background-girl4{
+div.container.Blusas{
 	background: url(../img/fondo_5.png)no-repeat;
 	height: 100%;
 	width: 100%;
 	background-size: cover;
 }
 /* ----------------------- PANTALLA 7 ARTICULOS*/
-img.articulos{
+img.articulos1{
 	position: absolute;
-	bottom: 130px;
-	left: 120px;
+	bottom: 75px;
+	left: 35px;
 }
-span.text {
+img.articulos2{
+	position: absolute;
+	bottom: 88px;
+	left: 175px;
+}
+img.articulos3{
+	position: absolute;
+	bottom: 75px;
+	left: 285px;
+}
+img.articulos4{
+	position: absolute;
+	bottom: 75px;
+	left: 435px;
+}
+p.contexto{
 	color: #fff;
 	font-weight: bold;
 	font-size: 17px;
+	text-align: center;
+	position: absolute;
+	bottom: 330px;
+	right: 170px;
 }
 /* ----------------------- PANTALLA 8 SLIDER*/
+.container.slider0{
+	margin-bottom: 0px;
+	width: 100%;
+	height: 100%;
+	background: url(../img/fondo.png)no-repeat;
+	background-size: cover;
+}
+.slider {
+	background: url(../img/cuadro.png)no-repeat;
+	height: 70%;
+	width: 85%;
+	position: absolute;
+	top: 79px;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+}
+.slick-prev {
+	left: 40px;
+}
+.slick-next {
+	right: 75px;
+}
+.slick-initialized .slick-slide {
+	margin-left: 150px;
+}
+.slick-slide img.art-1{
+	width: 15%;
+	margin-top: 28px;
+}
+.slick-slide img.art-2{
+	width: 14%;
+	margin-top: 38px;
+}
+.slick-slide img.art-3{
+	width: 15%;
+	margin-top: 28px;
+}
+.slick-slide img.art-4{
+	width: 22%;
+	margin-top: 28px;
+}
+.slick-slide img.art-5{
+	width: 19%;
+	margin-top: 28px;
+}
 
-
-
-
+h1.st{
+	color: #fff;
+	text-align: center;
+	position: absolute;
+	top: 105px;
+	right: 165px;
+	font-weight: 400;
+}
+p.stp{
+	color: #fff;
+	font-weight: bold;
+	font-size: 17px;
+	text-align: center;
+	position: absolute;
+	bottom: 95px;
+	right: 170px;
+}
+h1.st.primero{
+	top: 75px;
+}
+p.stp.primero{
+	bottom: 75px;
+}
+h1.st.segundo{
+	top: 125px;
+}
+p.stp.segundo{
+	bottom: 150px;
+	right: 155px;
+}
+p.stp.tercero{
+	right: 100px;
+}
+h1.st.cuarto{
+	top: 35px;
+	right: 280px;
+}
+p.stp.cuarto{
+	position: absolute;
+	top: 150px;
+}
+ol{
+	position: absolute;
+	bottom: 25px;
+	left: 160px;
+}
+.slick-dots {
+	bottom: 5px;
+}
+.slick-dots li button:before,.slick-dots li.slick-active button:before {
+	color: #fff;
+	font-size: 15px;
+}
+.slick-dots li button:hover:before, .slick-dots li button:focus:before {
+	font-size: 15px;
+}
 /* ----------------------- PANTALLA 9 GENTE LUMINOUS*/
+.container.Gente{
+	background: url(../img/fondo.png)no-repeat;
+	height: 100%;
+	width: 100%;
+	background-size: cover;
+}
 img.foto1{
 	position: absolute;
 	top: 120px;
@@ -214,26 +316,26 @@ p.name1{
 	font-size: 16px;
 	position: absolute;
 	top: 175px;
-	right: 783px;
+	right: 763px
 }
 p.name2{
 	font-size: 16px;
 	position: absolute;
 	top: 330px;
-	right: 783px;
+	right: 763px;
 }
 p.name3{
 	font-size: 16px;
 	position: absolute;
 	top: 501px;
-	right: 783px;
+	right: 763px;
 }
 p.text1{
 	position: absolute;
 	font-size: 10px;
 	width: 200px;
 	top: 199px;
-	right: 722px;
+	right: 702px;
 	text-align: left;
 }
 p.text2{
@@ -241,7 +343,7 @@ p.text2{
 	font-size: 10px;
 	width: 200px;
 	top: 354px;
-	right: 717px;
+	right: 702px;
 	text-align: left;
 }
 p.text3{
@@ -249,14 +351,54 @@ p.text3{
 	font-size: 10px;
 	width: 200px;
 	bottom: 63px;
-	right: 717px;
+	right: 702px;
 	text-align: left;
 }
-img.diente{
+img.diente2{
 	position: absolute;
 	right: 70px;
-	top: 335px;
+	top: 290px;
 }
-
-
-
+h1.tittle3{
+	color: #fff;
+	text-align: center;
+	position: absolute;
+	top: 155px;
+	right: 255px;
+}
+p.contexto2{
+	color: #fff;
+	font-weight: bold;
+	font-size: 17px;
+	text-align: center;
+	position: absolute;
+	bottom: 330px;
+	right: 145px;
+}
+div.footer{
+	background: url(../img/footer.png)no-repeat;
+	width: 100%;
+	height: 50px;
+	background-size: cover;
+}
+li.li {
+	display: inline-block;
+	margin-left: 31px;
+	color: #fff;
+	font-size: 16px;
+	padding-left: 142px;
+}
+ul.ul {
+	margin: auto; 
+	width: 1200px;
+}
+p.parrafo{
+	color: #fff;
+	font-size: 10px;
+	text-align: center;
+	margin-left: 520px;
+	position: relative;
+	width: 550px;
+	line-height: 10px;
+	padding-top: 8px;
+}
