--- a/css/style.css
+++ b/css/style.css
@@ -7,16 +7,7 @@
 html, body{
 	height: 100%;
 	width: 100%;
-}
-div.container{
-	min-height: 670px;
-	height: 100%;
-	width: 100%;
-	top: 0;
-	left: 0;
-	position: fixed;
-	background-color: #FFF;
-	overflow: hidden;
+	font-size: 17px;
 }
 ul {
 	list-style: none;
@@ -24,76 +15,152 @@ ul {
 h1{
 	color: #6c7982;
 	text-align: center;
-	position: absolute;
-	top: 155px;
-	right: 165px;
-	font-weight: 400;
-	width: 315px;
 }
-span{
+h1 span{
 	color: #6c7982;
 	font-weight: bold;
+	font-family: 'colgate_readybold';
 }
 p{
-	position: absolute;
-	right: 135px;
-	bottom: 10px;
-	font-size: 7px;
+	font-size: 0.5rem;
 	text-align: right;
 }
-/* ----------------------- NAV*/
-div.nav.bar{
-	background: url(../img/pleca.png)no-repeat;
-	height: 92px;
+div.container{
+	/*min-height: 670px;*/
+	height: 100%;
 	width: 100%;
-	float: left;
+	top: 0;
+	left: 0;
 	position: fixed;
+	background-color: #FFF;
+	overflow: hidden;
+	text-align: center;
+}
+div.container .girl{
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+}
+div.container .white-bg{
+	background: url(../img/white-bg.png) no-repeat right;
+	background-size: 65% 100%;
+	height: 100%;
+	width: 100%;
+	position: relative;
 	z-index: 1;
 }
+div.container .text{
+	position: absolute;
+	z-index: 2;
+	top: 25%;
+	left: 45%;
+	height: 75%;
+	width: 55%;
+	text-align: center;
+}
+div.container a.boton-up{
+	position: absolute;
+	top: -4rem;
+	right: 4rem;
+}
+div.container a.boton-up.last{
+	top: 5rem;
+}
+div.container a.boton-down{
+	position: absolute;
+	bottom: 0;
+	right: 4rem;
+}
+div.container a.boton-up img, div.container a.boton-down img{
+	width: 2rem;
+}
+div.container h1{
+	/*position: absolute;
+	top: 245px;
+	right: 150px;*/
+}
+div.container img.logo-luminous{
+	/*position: absolute;
+	right: 210px;
+	top: 115px;*/
+	width: 10rem;
+
+}
+div.container img.pasta{
+	/*position: absolute;
+	right: 70px;
+	top: 235px;*/
+	margin-top: -5rem;
+	width: 27rem;
+}
+div.container p{
+	position: absolute;
+	bottom: 1.2rem;
+	right: 4rem;
+}
+
+/* ----------------------- NAV*/
+div.nav.bar{
+	/*background: url(../img/pleca.png)no-repeat;*/
+	background: url(../img/logo-p3.png) no-repeat right;
+	height: 90px;
+	width: 100%;
+	position: fixed;
+	z-index: 5;
+}
+div.nav.bar > img{
+	float: left;
+}
+div.nav.bar .logo-part{
+	width: 16.5rem;
+}
+div.nav.bar ul{
+	background: url(../img/logo-p2.png) no-repeat;
+	float: left;
+	height: 6rem;
+	margin: 0;
+	position: relative;
+	z-index: 2;
+}
+div.nav.bar .red-fill{
+	background: url(../img/logo-rpt.png) repeat-x;
+	display: block;
+	height: 6rem;
+	position: absolute;
+	right: 1.8rem;
+	top: 0;
+}
+div.nav.bar ul li{
+	display: inline-table;
+	margin-left: 2rem;
+	margin-top: 2rem;
+	font-size: 1.1rem;
+	vertical-align: middle;
+}
+div.nav.bar ul li a{
+	color: #fff;
+}
+
 /* ----------------------- PANTALLA 1 INICIO*/
 div.Inicio{
-	background: url(../img/girl1.png)no-repeat;
+	/*background: url(../img/girl1.png)no-repeat;*/
+	background: url(../img/bg1.png) no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
 }
-ul {
-	margin: auto;
-	width: 690px;
-	margin-top: 37px;
-}
-li{
-	display: inline-block;
-	margin-left: 31px;
-	color: #fff;
-	font-size: 20px;
-}
-h1.tittle-1{
-	top: 245px;
-}
-img.logo-luminous{
-	position: absolute;
-	right: 210px;
-	top: 115px;
-}
-img.pasta{
-	position: absolute;
-	right: 70px;
-	top: 235px;
-}
-img.boton{
-	position: absolute;
-	bottom: 0px;
-	right: 70px;
-}
+
 /* ----------------------- PANTALLA 2 LENTES*/
 div.Lentes{
-	background: url(../img/fondo_3.png)no-repeat;
+	/*background: url(../img/fondo_3.png)no-repeat;*/
+	background: url(../img/bg2.png)no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
 }
 /* ----------------------- PANTALLA 3 TACONES*/
 div.Tacones{
-	background: url(../img/fondo_4.png)no-repeat;
+	/*background: url(../img/fondo_4.png)no-repeat;*/
+	background: url(../img/bg3.png)no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
 }
@@ -109,50 +176,50 @@ div.Iluminadores{
 	width: 100%;
 	background-size: cover;
 }
-img.diente{
+div.diente-container{
 	position: absolute;
-	/*top: 100px;*/
-	top: 55px;
-	left: -95px;
+	/* top: 100px; */
+	top: 10.5rem;
+	left: -6rem;
+	width: 40rem;
+}
+img.diente{
+	width: 95%;
 }
 img.sparkles{
 	position: absolute;
-	top: 65px;
-	left: 450px;
+	top: 4rem;
+	left: 30rem;
+	z-index: 3;
 }
 h1.tittle{
+	font-family: 'colgate_readybold';
 	color: #fff;
 }
 h1.sub{
 	top: 250px;
 }
-p.time{
+div.container p.time{
 	position: absolute;
-	top: 170px;
-	left: 430px;
+	top: 5rem;
+	left: 24.3rem;
 	right: inherit;
 	bottom: inherit;
 	color: #fff;
-	font-size: 16px;
+	font-size: 1rem;
+	width: 5rem;
 }
 p.leyenda{
 	color: #fff;
 }
-p.drama{
-	/*
+div.container p.drama{
 	color: #fff;
-	font-size: 20px;
+	font-size: 1.3rem;
 	position: absolute;
-	right: 850px;
-	bottom: 50px;
-	font-weight: 500;
-	*/
-	color: #fff;
-	font-size: 20px;
-	position: absolute;
-	left: 275px;
+	left: 16rem;
+	top: 22rem;
 	right: inherit;
-	bottom: 120px;
+	bottom: inherit;
 	font-weight: 500;
 }
 h1.opticos {
@@ -172,8 +239,9 @@ img.minutos{
 }
 img.banner{
 	position: absolute;
-	bottom: 10px;
-	left: 0px
+	bottom: 1rem;
+	left: 0px;
+	width: 30rem;
 }
 p.drama2 {
 	color: #fff;
@@ -185,138 +253,146 @@ p.drama2 {
 }
 /* ----------------------- PANTALLA 6 BLUSAS*/
 div.container.Blusas{
-	background: url(../img/fondo_5.png)no-repeat;
+	/*background: url(../img/fondo_5.png)no-repeat;*/
+	background: url(../img/bg4.png) no-repeat;
 	height: 100%;
 	width: 100%;
 	background-size: cover;
 }
 /* ----------------------- PANTALLA 7 ARTICULOS*/
-img.articulos1{
+div.container .articulos-list{
+	width: 35%;
 	position: absolute;
-	bottom: 75px;
-	left: 35px;
+	top: 18%;
+	left: 10%;
 }
-img.articulos2{
-	position: absolute;
-	bottom: 88px;
-	left: 175px;
+div.container .articulos-list a{}
+div.container .articulos-list a img{
 }
-img.articulos3{
-	position: absolute;
-	bottom: 75px;
-	left: 285px;
+.articulos1 img{
+	height: 15rem;
 }
-img.articulos4{
-	position: absolute;
-	bottom: 75px;
-	left: 435px;
+.articulos2 img{
+	height: 15rem;
 }
-p.contexto{
+.articulos3 img{
+	height: 15rem;
+}
+.articulos4 img{
+	width: 20rem;
+}
+.articulos5 img{
+	width: 20rem;
+}
+div.container p.contexto{
 	color: #fff;
-	font-weight: bold;
-	font-size: 17px;
+	font-size: 1rem;
 	text-align: center;
-	position: absolute;
-	bottom: 330px;
-	right: 105px;
+	position: relative;
+	bottom: inherit;
+	right: inherit;
 }
 /* ----------------------- PANTALLA 8 SLIDER*/
-.container.slider0{
-	margin-bottom: 0px;
-	width: 100%;
-	height: 100%;
-	background: url(../img/fondo.png)no-repeat;
+.fancybox-overlay{
+	background: url(../img/fondo.png) no-repeat;
 	background-size: cover;
 }
+.fancybox-skin{
+	background: transparent;
+}
+.fancybox-close{
+	background: url(../img/boton-tache.png) no-repeat;
+	top: 1rem;
+	right: 3rem;
+	width: 2rem;
+	height: 2rem;
+	background-size: cover;
+}
+.slider0{
+	width: 100%;
+	height: 100%;
+}
 .slider {
-	background: url(../img/cuadro.png)no-repeat;
-	height: 70%;
-	width: 85%;
 	position: absolute;
-	top: 79px;
+	top: 0;
 	bottom: 0;
 	left: 0;
 	right: 0;
 	margin: auto;
 }
-.slick-prev {
-	left: 40px;
-}
-.slick-next {
-	right: 75px;
-}
-.slick-initialized .slick-slide {
-	margin-left: 150px;
-}
-.slick-slide img.art-1{
-	width: 15%;
-	margin-top: 28px;
-}
-.slick-slide img.art-2{
-	width: 14%;
-	margin-top: 38px;
-}
-.slick-slide img.art-3{
-	width: 15%;
-	margin-top: 28px;
-}
-.slick-slide img.art-4{
-	width: 22%;
-	margin-top: 28px;
-}
-.slick-slide img.art-5{
-	width: 19%;
-	margin-top: 28px;
+.slick-prev,.slick-prev:hover,.slick-prev:focus {
+	left: 1rem;
+	background: url(../img/boton-flecha-atras.png) no-repeat;
+	width: 1rem;
+	height: 2rem;
+	background-size: cover;
 }
 
-h1.st{
+.slick-next,.slick-next:hover,.slick-next:focus {
+	right: 1rem;
+	background: url(../img/boton-flecha-adelante.png) no-repeat;
+	width: 1rem;
+	height: 2rem;
+	background-size: cover;
+}
+
+.slick-prev::before, .slick-next::before{
+	content: "";
+	display: none;
+}
+.slick-slide .row{
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	margin: auto;
+	height: 60%;
+	width: 85%;
+}
+.slick-slide .row > div{
+	height: 100%;
+}
+.slick-slide .row > div .thumb{
+	margin: auto;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+}
+.slick-slide .row > div .h-thumb{
+	width: 90%;
+}
+.slick-slide .row > div .desc{
+	margin: auto;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	height: 11rem;
+}
+.slick-slide .row > div .desc.big{
+	height: 21rem;
+}
+.slick-slide .row > div .desc h1{
 	color: #fff;
-	text-align: center;
-	position: absolute;
-	top: 105px;
-	right: 165px;
-	font-weight: 400;
+	font-size: 1.8rem;
 }
-p.stp{
+.slick-slide .row > div .desc p{
+	text-align: center;
 	color: #fff;
-	font-weight: bold;
-	font-size: 17px;
-	text-align: center;
-	position: absolute;
-	bottom: 95px;
-	right: 170px;
+	font-size: 1rem;
+	margin-top: 0.8rem;
 }
-h1.st.primero{
-	top: 75px;
-}
-p.stp.primero{
-	bottom: 75px;
-}
-h1.st.segundo{
-	top: 125px;
-}
-p.stp.segundo{
-	bottom: 150px;
-	right: 155px;
-}
-p.stp.tercero{
-	right: 100px;
-}
-h1.st.cuarto{
-	top: 35px;
-	right: 280px;
-}
-p.stp.cuarto{
-	position: absolute;
-	top: 150px;
-}
-ol{
-	position: absolute;
-	bottom: 25px;
-	left: 160px;
+.slick-slide .row > div .desc ol{
+	color: #fff;
+	font-size: 1rem;
+	/*margin-top: 0.8rem;*/
 }
 .slick-dots {
-	bottom: 5px;
+	bottom: 1rem;
 }
 .slick-dots li button:before,.slick-dots li.slick-active button:before {
 	color: #fff;
@@ -325,125 +401,241 @@ ol{
 .slick-dots li button:hover:before, .slick-dots li button:focus:before {
 	font-size: 15px;
 }
+
 /* ----------------------- PANTALLA 9 GENTE LUMINOUS*/
 .container.Gente{
-	background: url(../img/fondo.png)no-repeat;
-	height: 100%;
-	width: 100%;
+	background: url(../img/fondo.png) no-repeat;
 	background-size: cover;
 }
-img.foto1{
+div.people{
 	position: absolute;
-	top: 120px;
-	width: 28%;
-	left: 200px;
+	top: 17%;
+	width: 45%;
 }
-img.foto2{
-	position: absolute;
-	top: 290px;
-	width: 28%;
-	left: 200px;
+div.people .pip{
+	width: 21rem;
+	height: 9.3rem;
+	margin: 0.1rem auto;
+	position: relative;
+	overflow: hidden;
 }
-img.foto3{
+div.people .pip > div{
 	position: absolute;
-	bottom: 40px;
-	width: 28%;
-	left: 200px;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 95%;
 }
-p.name1{
-	font-size: 16px;
-	position: absolute;
-	top: 175px;
-	right: 763px
+div.people .pip .pip-p{
+	background: url(../img/marco-p.png) no-repeat;
+	background-size: cover;
+	left: 3.5rem;
+	width: 80%;
+	height: 70%;
+	top: 1.1rem;
+	padding-top: 0.4rem;
+	z-index: 1;
 }
-p.name2{
-	font-size: 16px;
-	position: absolute;
-	top: 330px;
-	right: 763px;
-}
-p.name3{
-	font-size: 16px;
-	position: absolute;
-	top: 501px;
-	right: 763px;
-}
-p.text1{
-	position: absolute;
-	font-size: 10px;
-	width: 200px;
-	top: 199px;
-	right: 702px;
+div.people .pip .pip-p p{
 	text-align: left;
+	font-size: 0.75rem;
 }
-p.text2{
-	position: absolute;
-	font-size: 10px;
-	width: 200px;
-	top: 354px;
-	right: 702px;
-	text-align: left;
+div.people .pip .pip-p .pip-name{
+	bottom: inherit;
+	right: inherit;
+	left: 2.7rem;
+	font-size: 1rem;
 }
-p.text3{
-	position: absolute;
-	font-size: 10px;
-	width: 200px;
-	bottom: 63px;
-	right: 702px;
-	text-align: left;
+div.people .pip .pip-p .pip-content{
+	top: 2rem;
+	left: 2.3rem;
+	width: 13rem;
+}
+div.people .pip .pip-back{
+	z-index: 0;
+	background: url(../img/marco-back.png) no-repeat;
+	background-size: cover;
 }
 img.diente2{
-	position: absolute;
-	right: 70px;
-	top: 290px;
+	width: 24rem;
 }
-h1.tittle3{
-	color: #fff;
-	text-align: center;
-	position: absolute;
-	top: 155px;
-	right: 255px;
+
+/* ----------------------- PANTALLA 10 MAGAZINE*/
+.container.Magazine{
+	background: url(../img/fondo.png) no-repeat;
+	background-size: cover;
 }
-p.contexto2{
-	color: #fff;
-	font-weight: bold;
-	font-size: 17px;
-	text-align: center;
+.container.Magazine .row:nth-child(1){
+	padding: 7rem 0 0;
+}
+.container.Magazine .row:nth-child(1) .columns .btn{
+	width: 7rem;
+	height: 1.7rem;
+	display: block;
+	background-size: cover;
 	position: absolute;
-	bottom: 330px;
-	right: 145px;
+}
+a.fb-large{
+	background: url(../img/fb-large.png) no-repeat;
+	top: 3rem;
+}
+a.tw-large{
+	background: url(../img/tw-large.png) no-repeat;
+	top: 3rem;
+	left: 9rem;
+}
+.container.Magazine .row:nth-child(2){
+	height: 60%;
+}
+.container.Magazine .articles{
+	height: 100%;
+	position: relative;
+}
+.container.Magazine .articles div:nth-child(2) .single{
+	margin: 0.7rem 0;
+}
+.container.Magazine .articles .article{
+	margin: 1rem;
+	float: left;
+}
+.container.Magazine .articles .article a{
+	position: absolute;
+	top: 10%;
+	left: 5%;
+	z-index: 2;
+	width: 86%;
+	height: 74%;
+	overflow: hidden;
+}
+.container.Magazine .articles .quart{
+	/*background: grey;*/
+	width: 19rem;
+	height: 14rem;
+	position: relative;
+	overflow: hidden;
+}
+.container.Magazine .articles .quart::before{
+	content: "";
+	background: url(../img/marco-magazine.png) no-repeat;
+	background-size: cover;
+	width: 19.2rem;
+	height: 14rem;
+	display: block;
+	position: relative;
+	left: -0.4rem;
+	top: -0.1rem;
+}
+.container.Magazine .articles .single{
+	width: 6rem;
+	height: 4.5rem;
+	margin: 0.7rem 2rem;
+	position: relative;
+	overflow: hidden;
+}
+.container.Magazine .articles .single::before{
+	content: "";
+	background: url(../img/marco-magazine.png) no-repeat;
+	background-size: cover;
+	width: 7rem;
+	height: 5rem;
+	display: block;
+	position: relative;
+	left: -0.4rem;
+	top: -0.1rem;
 }
 div.footer{
-	position: fixed;
+	position: absolute;
 	bottom: 0;
 	left: 0;
 	background: url(../img/footer.png)no-repeat;
 	width: 100%;
-	height: 50px;
+	height: 3rem;
 	background-size: cover;
 }
-li.li {
+div.footer ul {
+	/*margin: auto; 
+	width: 1200px;*/
+	margin: 0;
+}
+div.footer ul li {
 	display: inline-block;
-	margin-left: 31px;
-	color: #fff;
-	font-size: 16px;
-	padding-left: 142px;
-}
-ul.ul {
-	margin: auto; 
-	width: 1200px;
-}
-p.parrafo{
-	color: #fff;
-	font-size: 10px;
+	font-size: 0.7rem;
+	/* padding-left: 142px; */
 	text-align: center;
-	margin-left: 520px;
-	position: relative;
-	width: 550px;
-	line-height: 10px;
-	padding-top: 8px;
+	width: 24.7%;
+}
+div.footer ul li a{
+	color: #fff;
+}
+
+div.footer p.parrafo{
+	color: #fff;
+	font-size: 0.5rem;
+	text-align: center;
+	/* margin-left: 520px; */
+	/* position: inherit; */
+	width: 100%;
+	bottom: auto;
+	right: auto;
+	/* padding-top: 0.5rem; */
+	text-align: center;
+}
+
+/* ----------------------- POLITICAS*/
+#terminos, #privacidad{
+	display: none;
+}
+#politicas{
+	padding: 2rem;
+}
+#politicas h1{
+	color: #fff;
+}
+#politicas p, #politicas ul, #politicas ol{
+	color: #fff;
+	text-align: left;
+	font-size: 0.7rem;
 }
 /* ------------------------------ slider 2*/
+.Articulo > .row{
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	margin: auto;
+	height: 60%;
+	width: 85%;
+}
+.Articulo > .row > div{
+	height: 100%;
+}
+.Articulo > .row > div img{
+	margin: auto;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+}
+.Articulo > .row > div .desc h1{
+	color: #fff;
+	font-size: 1.2rem;
+}
+.Articulo > .row > div .desc p{
+	text-align: center;
+	color: #fff;
+	font-size: 0.7rem;
+	margin-top: 0.8rem;
+}
+.Articulo > .row:nth-child(1) .columns .btn{
+	width: 7rem;
+	height: 1.7rem;
+	display: block;
+	background-size: cover;
+	/* float: left; */
+	margin: 1rem auto;
+}
 p.stp.arti{
 	width: 400px;
 	text-align: left;
@@ -463,7 +655,7 @@ div.marco{
 	top: 90px;
 }
 .slick-initialized .slick-slide {
-	height: 425px;
+	height: 565px;
 }
 .slick-slide img.art-fotoss {
 	width: 31%;
@@ -479,4 +671,63 @@ button.close{
 	top: 20px;
 	left: 794px;
 
+}
+
+/* ------------------------------ RESPONSIVE*/
+@media(max-width: 720px){
+	html,body{
+		font-size: 9px;
+	}
+	div.nav.bar ul{
+		background-size: cover;
+		padding-right: 4rem;
+		height: 6rem;
+	}
+	div.nav.bar ul li{
+		margin-left: 0.9rem;
+	}
+	div.nav.bar ul li a img{
+		width: 5rem;
+	}
+	div.nav.bar ul li:nth-child(5) a img{
+		width: 2rem;
+	}
+	div.nav.bar .red-fill{
+		display: none;
+	}
+	.container.Magazine .row:nth-child(1){
+		padding: 7rem 0 0;
+	}
+	.container.Magazine .articles .single{
+		margin: 0.7rem 1rem;
+	}
+}
+@media(max-width: 960px){
+	html,body{
+		font-size: 13px;
+	}
+	div.nav.bar{
+		background: url(../img/logo-p3.png) no-repeat right 0.5rem;
+		background-size: 3% 80%;
+	}
+	div.nav.bar .logo-part {
+		width: auto;
+		height: 6rem;
+	}
+}
+@media(max-device-height: 568px){
+	html,body{
+		font-size: 13px;
+	}
+	div.nav.bar{
+		background: url(../img/logo-p3.png) no-repeat right 0.5rem;
+		background-size: 3% 80%;
+	}
+	div.nav.bar .logo-part {
+		width: auto;
+		height: 6rem;
+	}
+	div.diente-container{
+		top: 5.5rem;
+	}
 }
