--- a/css/style.css
+++ b/css/style.css
@@ -146,9 +146,10 @@ div.nav.bar ul li a{
 /* ----------------------- PANTALLA 1 INICIO*/
 div.Inicio{
 	/*background: url(../img/girl1.png)no-repeat;*/
-	background: url(../img/bg1.png) no-repeat;
+	background: url(../img/bg1_.png) no-repeat;
 	background-size: cover;
-	-moz-background-size: cover;
+		-moz-background-size: cover;
+		-webkit-background-size: cover;
 	background-attachment: fixed;
 }
 html[xmlns*=""]:root div.Inicio{
@@ -723,7 +724,7 @@ div.footer p.parrafo{
 	right: 0;
 	bottom: 0;
 	width: 100%;
-	height: auto;
+	height: 350px;
 	overflow: hidden;
 }
 .Articulo > .row > div .gal .gal-next{
@@ -763,6 +764,9 @@ div.footer p.parrafo{
 	right: 0;
 	bottom: 0;
 }
+.Articulo > .row > div .desc{
+	padding: 35px 0 0 0;
+}
 .Articulo > .row > div .desc h1{
 	color: #fff;
 	font-size: 1.2rem;
@@ -770,9 +774,10 @@ div.footer p.parrafo{
 .Articulo > .row > div .desc p{
 	text-align: justify;
 	color: #fff;
-	font-size: 0.7rem;
-	margin-top: 0.8rem;
-	height: 15rem;
+	font-size: 0.7em;
+	margin-top: 0.8em;
+	height: 15em;
+	padding-right: 20px;
 	overflow-y: auto;
 }
 .Articulo > .row:nth-child(1) .columns .btn{
@@ -823,6 +828,29 @@ button.close{
 	top: 20px;
 	left: 794px;
 
+}
+
+.frame{
+	overflow-y: scroll;
+	overflow-x: hidden;
+	/*position: fixed;*/
+}
+.frame::-webkit-scrollbar{
+	-webkit-appearance: none;
+}
+.frame::-webkit-scrollbar:vertical{
+	width: 11px;
+}
+.frame::-webkit-scrollbar:horizontal{
+	height: 11px;
+}
+.frame::-webkit-scrollbar-thumb{
+	border-radius: 8px;
+	background-color: #fa3535
+}
+.frame::-webkit-scrollbar-track{
+	background-color: #ab1818;
+	border-radius: 8px;
 }
 
 /* ------------------------------ RESPONSIVE*/
@@ -890,5 +918,23 @@ button.close{
 	}
 	div.diente-container{
 		top: 5.5rem;
+	}
+}
+
+
+@media screen and (min-width: 320px){
+	.Articulo > .row > div > .desc{
+		padding: 0;
+	}
+	.Articulo > .row > div > .desc > p{
+		width: 90%;
+		height: 10em;
+		font-size: 0.9em;
+		padding-left: 5px;
+	}
+	.frame{
+		overflow-y: scroll;
+		overflow-x: hidden;
+		-webkit-overflow-scrolling: touch;
 	}
 }
